# asteroid-dodger

./: CMakeLists.txt  README.md  asteroid-dodger.desktop  asteroid-dodger.qml  main.cpp  main.qml  resources.qrc
recipe/: asteroid-dodger.bb
